--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
+server.port=${PORT:8080}
 spring.h2.console.enabled=true
 spring.datasource.url=jdbc:h2:file:./ohbp
 spring.datasource.driverClassName=org.h2.Driver
