novi logo, gumb, polja na administrator_page.html formi

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,19 @@
 server.port=${PORT:8080}
 spring.h2.console.enabled=true
-spring.datasource.url=jdbc:h2:file:./ohbp
+spring.datasource.url=jdbc:h2:file:./ohbp_master
 spring.datasource.driverClassName=org.h2.Driver
 
 spring.datasource.username=sa
-spring.datasource.password=
+spring.datasource.password=sa
+
+
+spring.second.datasource.url=jdbc:h2:file:./ohbp_slave
+spring.second.datasource.driverClassName=org.h2.Driver
+
+spring.second.datasource.username=sa
+spring.second.datasource.password=sa
+
+
 
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
