--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,6 +7,11 @@ spring.datasource.username=sa
 spring.datasource.password=sa
 
 
+spring.h2.console.enabled=true
+spring.h2.console.settings.web-allow-others=true
+spring.h2.console.path=/h2-console/
+
+
 spring.second.datasource.url=jdbc:h2:file:./ohbp_slave
 spring.second.datasource.driverClassName=org.h2.Driver
 
@@ -17,3 +22,6 @@ spring.second.datasource.password=sa
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
 spring.jpa.hibernate.ddl-auto= update
+
+spring.jpa.generate-ddl=true
+
